# overcast-opml-parser

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
overcast_opml_parser/: __init__.py  __main__.py
tests/: test_cli.py  test_nothing.py  test_overcast_opml_parser.py  test_parser.py
tests/fixtures/: no_feeds.opml  no_playlists.opml  overcast.opml
