[tool.poetry]
name = "overcast-opml-parser"
version = "0.0.1"
description = "A parser for Overcast's extended format"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
untangle = "^1.1.1"
click = "^8.1.8"
pydantic = "^2.11.3"
requests-xml = "^0.2.3"
loguru = "^0.7.3"

[tool.poetry.dev-dependencies]
pylint = "^3.3.6"
pytest = "^8.3.5"
mypy = "^1.15"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "overcast-opml-parser"
description = "A parser for Overcast's extended format"
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
