[project]
name = "overcast-opml-parser"
version = "0.0.1"
description = "A parser for Overcast's extended format"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
dependencies = [
    "click>=8.4.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "requests-xml>=0.2.3",
    "untangle>=1.2.1",
]

[project.scripts]
overcast-opml-parser = "overcast_opml_parser.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.14.2", #toml line breaking
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.54",
]
